@startuml
'https://plantuml.com/class-diagram

class App
class Task
class ToDoList

class App {
List<TodoList> todoLists
Scene scene
Stage stage

void start()
void loadHome()
void loadToDoList()
}

class HomeController {
Button addButton
Button deleteButton
Button modifyButton
TextField toDoListTextField
TableView<TodoList> todoList
TableColumn<TodoList, String> col_title

addHandler()
deleteHandler()
modifyHandler()
loadToDoList()
}

class Task {
SimpleStringProperty description
SimpleStringProperty dueDate
SimpleBooleanProperty completed

}

class ToDoList {
SimpleStringProperty title
ObservableList<Task> tasks
}

class ToDoListController {

    Button addButton;
    Button deleteButton;
    Button markAsCompletedButton;
    Button backToHomeButton;
    Button toggleTable;
    TextField titleTextField;
    DatePicker datePicker;
    TableView<Task> taskList;
    TableView<Task> allList = new TableView<>();
    TableColumn<Task, String> col_description;
    TableColumn<Task, String> col_due_date;
    TableColumn<Task, String> col_completed;

    addHandler()
    deleteHandler()
    modifyHandler()
    saveToDoList()
}
App..>ToDoListController
ToDoListController..>ToDoList
App..>HomeController
ToDoList..> Task

@enduml